August 22, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * libpcsxcore/misc.c: Also check for PSX.EXE in CheckCdrom().

August 17, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/peopsxgl/gpu.c: Made the name of the plugin translatable.
 * plugins/dfsound/spu.c: Likewise.
 * plugins/dfxvideo/gpu.c: Likewise.
 * plugins/dfinput/pad.c: Likewise.
 * plugins/dfcdrom/cdr.c: Likewise.
 * plugins/dfcdrom/interface.c: #include locale.h.
 * po/update-pot.sh: Also check plugins' source files.
 * plugins/dfxvideo/Makefile.am: Removed VERSION and NUMBER defination.
 * po/zh_CN.po, po/zh_TW.po, po/pcsx.pot: Updated.

August 9, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * win32/cdrom02.ico: Reworked the icon.
 * win32/pcsx.rc: Added cheat-related dialogs.
 * win32/resource.h: Likewise.
 * win32/gui/CheatDlg.c: Added, implemented Cheat Dialog.
 * win32/pcsx.dsp: Added CheatDlg.c.
 * win32/pcsx.dev: Likewise.
 * win32/gui/plugin.c: Use lowercase for #include's.
 * win32/gui/AboutDlg.c: Likewise.
 * win32/gui/ConfigurePlugins.c: Likewise.
 * win32/gui/Win32.h: Added prototype from CheatDlg.c.
 * win32/gui/WndMain.c: Added Cheat functions to the menu.
 * win32/glue/stdint.h: Added a "no warranty" disclaimer.
 * win32/glue/sys/mman.h: Likewise.

August 5, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/dfxvideo/prim.c: Reverted the previous change, which is wrong.

July 27, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/dfxvideo/prim.c: Clamp the offsets before performing
   blkfill.

July 24, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * libpcsxcore/cdriso.c: Implemented CCD parsing.
 * libpcsxcore/cheat.c: Optimized Cheat Applying a bit.

July 15, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * libpcsxcore/psxbios.c: Allocate more stack spaces to fix crash at FF7
   minigames.
 * libpcsxcore/cdriso.c: Implemented CUE parsing.

July 7, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * libpcsxcore/psxbios.c: Use u32 instead of native pointer for